[package]
name = "backend"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[dependencies]
axum = "0.7"
axum-macros = "0.4"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid", "chrono", "rust_decimal"] }
dotenv = "0.15"
async-trait = "0.1"
hex = "0.4"
reqwest = { version = "0.11", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
actix-web = "4.4"
actix-web-httpauth = "0.8"
jsonwebtoken = "8.3"
log = "0.4"
env_logger = "0.10"
hyper = { version = "0.14", features = ["full"] }
serde_with = "3.0"
anyhow = "1.0"
num-traits = "0.2"
web3 = { version = "0.18.0", features = ["http"] }
secp256k1 = { version = "0.27.0", features = ["serde"] }
ethabi = "16.0.0"
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
sha3 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tower = "0.5.2"
http = "1.0"

[dev-dependencies]
mockall = "0.11.4"
tokio-test = "0.4.2"
async-trait = "0.1.68"
tower-test = "0.4.0"
assert_matches = "1.5.0"
serial_test = "2.0.0" 

[[bin]]
name = "backend"
path = "src/main.rs"
